--- a/public/feed/index.html
+++ b/public/feed/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Connect with SoundCloud</title>
-  </head>
-  <body onload="window.setTimeout(window.opener.SC.connectCallback, 1)">
-    <b style="text-align: center;">This popup should automatically close in a few seconds</b>
-  </body>
+
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <title>Connect with SoundCloud</title>
+</head>
+
+<body onload="setTimeout(window.opener.SC.connectCallback)">
+  <b style="text-align: center;">This popup should automatically close in a few seconds</b>
+</body>
+
 </html>
