--- a/public/feed/index.html
+++ b/public/feed/index.html
@@ -6,7 +6,7 @@
   <title>Connect with SoundCloud</title>
 </head>
 
-<body onload="setTimeout(window.opener.SC.connectCallback)">
+<body onload="window.setTimeout(window.opener.SC.connectCallback, 1)">
   <b style="text-align: center;">This popup should automatically close in a few seconds</b>
 </body>
 
