--- a/public/feed/index.html
+++ b/public/feed/index.html
@@ -6,8 +6,11 @@
   <title>Connect with SoundCloud</title>
 </head>
 
-<body onload="setTimeout(window.opener.SC.connectCallback, 1)">
+<body>
   <b style="text-align: center;">This popup should automatically close in a few seconds</b>
+  <script type="text/javascript">
+    window.opener.SC.connectCallback.call(this);
+  </script>
 </body>
 
 </html>
